# cmake-cookbook

./: README.md
chapter4/receipe-01/: CMakeLists.txt  catch_sum_test.cpp  main.cpp  test.cpp
chapter4/receipe-03/: CMakeLists.txt  test.cpp
chapter4/receipe-04/: CMakeLists.txt  sum_integers.cpp  test.cpp
